--- a/src/app/components/side-nav/side-nav.html
+++ b/src/app/components/side-nav/side-nav.html
@@ -1,1 +1,81 @@
-<p>side-nav works!</p>
+<aside
+  [class.w-20]="isCollapsed()"
+  [class.w-64]="!isCollapsed()"
+  class="bg-white h-screen transition-all duration-300 ease-in-out p-4 flex flex-col justify-between"
+>
+  <div class="space-y-4">
+    <div class="flex items-center" [class.justify-center]="isCollapsed()">
+      <img src="assets/profile.jpg" alt="Profile" class="h-10 w-10 rounded-full" />
+      @if (!isCollapsed()) {
+      <span class="ml-2 font-semibold">Sophia Clark</span>
+      }
+    </div>
+    <hr />
+
+    <nav>
+      <ul class="space-y-2">
+        <li class="relative">
+          <a
+            [routerLink]="['./']"
+            [routerLinkActiveOptions]="{ exact: true }"
+            routerLinkActive="bg-blue-100 text-blue-700 font-medium"
+            class="flex items-center p-3 rounded-lg hover:bg-gray-100 transition-colors duration-200"
+            [class.justify-center]="isCollapsed()"
+            [class.justify-start]="!isCollapsed()"
+          >
+            <span class="text-xl"> <i class="fas fa-home"></i> </span>
+
+            @if (!isCollapsed()) {
+            <span class="ml-3">Dashboard</span>
+            } @else {
+            <div
+              class="absolute left-full top-1/2 -translate-y-1/2 ml-4 p-2 bg-gray-800 text-white text-xs rounded-md shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 whitespace-nowrap z-50"
+            >
+              Dashboard
+            </div>
+            }
+          </a>
+        </li>
+        @for (item of navItems(); track item.name) {
+        <li class="relative group">
+          <a
+            [routerLink]="item.route"
+            routerLinkActive="bg-blue-100 text-blue-700 font-medium"
+            class="flex items-center p-3 rounded-lg hover:bg-gray-100 transition-colors duration-200"
+            [class.justify-center]="isCollapsed()"
+            [class.justify-start]="!isCollapsed()"
+          >
+            <span class="text-xl"> <i class="fas fa-{{ item.icon }}"></i> </span>
+
+            @if (!isCollapsed()) {
+            <span class="ml-3">{{ item.name }}</span>
+            } @else {
+            <div
+              class="absolute left-full top-1/2 -translate-y-1/2 ml-4 p-2 bg-gray-800 text-white text-xs rounded-md shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 whitespace-nowrap z-50"
+            >
+              {{ item.name }}
+            </div>
+            }
+          </a>
+        </li>
+        }
+      </ul>
+    </nav>
+  </div>
+
+  <div class="mt-auto">
+    <hr />
+    <button
+      class="w-full flex items-center p-3 rounded-lg text-red-500 hover:bg-gray-100 mt-4"
+      [class.justify-center]="isCollapsed()"
+      [class.justify-start]="!isCollapsed()"
+    >
+      <span class="text-xl">
+        <i class="fas fa-sign-out-alt"></i>
+      </span>
+      @if (!isCollapsed()) {
+      <span class="ml-3">Sign Out</span>
+      }
+    </button>
+  </div>
+</aside>
